[php] Start adding tests

--- a/mode/php/index.html
+++ b/mode/php/index.html
@@ -44,13 +44,8 @@ function hello($who) {
 
     <script>
       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
-        lineNumbers: true,
-        matchBrackets: true,
-        mode: "application/x-httpd-php",
-        indentUnit: 4,
-        indentWithTabs: true,
-        enterMode: "keep",
-        tabMode: "shift"
+        mode: "text/x-php",
+        indentUnit: 4
       });
     </script>
 
