--- a/test/index.html
+++ b/test/index.html
@@ -75,6 +75,7 @@
     <script src="search_test.js"></script>
     <script src="mode_test.js"></script>
     <script src="../mode/javascript/test.js"></script>
+    <script src="../mode/clike/clike.js"></script>
     <script src="../mode/css/css.js"></script>
     <script src="../mode/css/test.js"></script>
     <script src="../mode/css/scss_test.js"></script>
@@ -88,6 +89,8 @@
     <script src="../mode/markdown/test.js"></script>
     <script src="../mode/gfm/gfm.js"></script>
     <script src="../mode/gfm/test.js"></script>
+    <script src="../mode/php/php.js"></script>
+    <script src="../mode/php/test.js"></script>
     <script src="../mode/stex/stex.js"></script>
     <script src="../mode/stex/test.js"></script>
     <script src="../mode/xquery/xquery.js"></script>
